<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/choose_no_of_players"

        android:id="@+id/t1"
        android:textSize="50sp"
        android:textColor="#0000ff"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/m1"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
android:background="@drawable/border"
        android:textColor="@color/green"
        android:textSize="40sp"
        android:layout_marginTop="200dp"
        android:text="@string/players2"
        />
    <Button
        android:id="@+id/m2"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:background="@drawable/border_r"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red"
        android:textSize="40sp"

        android:layout_marginTop="350dp"
        android:text="@string/players3" />
    <Button
        android:id="@+id/m3"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:background="@drawable/border_y"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/yellow"
        android:textSize="40sp"
        android:layout_marginTop="500dp"
        android:text="@string/players4" />
</RelativeLayout>
