<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
android:layout_marginTop="25dp"
        android:textSize="45sp"
        android:textAlignment="center"
        android:text="@string/t1"
        android:gravity="center_horizontal"
        android:textColor="#0000ff"/>

    <Button
        android:id="@+id/b1"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
android:background="@drawable/border"
        android:shadowColor="@color/green"
        android:padding="5dp"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="500"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textColor="@color/green"
        android:textSize="40sp"
        android:text="@string/b1" />

    <Button
        android:id="@+id/b2"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
android:background="@drawable/border_r"
        android:textColor="@color/red"
        android:textSize="40sp"

        android:layout_marginTop="350dp"
        android:text="@string/b2" />

    <Button
        android:id="@+id/b3"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/border_y"
        android:layout_centerHorizontal="true"
        android:textColor="@color/yellow"
        android:textSize="40sp"
        android:layout_marginTop="500dp"
        android:text="@string/b3" />

</RelativeLayout>