<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <viewsa.CustomView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/c2"
        />
    <Button
        android:id="@+id/button41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="650dp"
        android:text="@string/undo" />

    <Button
        android:id="@+id/button1"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="284dp"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="138dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="284dp"
        />
    <Button
        android:id="@+id/button3"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="213dp"
        android:layout_marginLeft="213dp"
        android:layout_marginTop="284dp"
        />
    <Button
        android:id="@+id/button5"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="359dp"
        />
    <Button
        android:id="@+id/button6"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="138dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="359dp"
        />
    <Button
        android:id="@+id/button7"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="213dp"
        android:layout_marginLeft="213dp"
        android:layout_marginTop="359dp"
        />
    <Button
        android:id="@+id/button9"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="434dp"
        />
    <Button
        android:id="@+id/button10"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="138dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="434dp"
        />
    <Button
        android:id="@+id/button11"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="213dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="434dp"
        />
    <Button
        android:id="@+id/button13"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="509dp"
        />
    <Button
        android:id="@+id/button14"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="138dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="509dp"
        />
    <Button
        android:id="@+id/button15"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="213dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="509dp"
        />

    <Button
        android:id="@+id/button21"
        android:layout_width="40dp"
        android:layout_height="65dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="310dp" />
    <Button
        android:id="@+id/button22"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="310dp" />
    <Button
        android:id="@+id/button23"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="189dp"
        android:layout_marginLeft="189dp"
        android:layout_marginTop="310dp" />
    <Button
        android:id="@+id/button24"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="261dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="310dp" />
    <Button
        android:id="@+id/button26"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="385dp" />
    <Button
        android:id="@+id/button27"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="385dp" />
    <Button
        android:id="@+id/button28"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="189dp"
        android:layout_marginLeft="189dp"
        android:layout_marginTop="385dp" />
    <Button
        android:id="@+id/button29"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="261dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="385dp" />
    <Button
        android:id="@+id/button31"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="460dp" />
    <Button
        android:id="@+id/button32"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="460dp" />
    <Button
        android:id="@+id/button33"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="189dp"
        android:layout_marginLeft="189dp"
        android:layout_marginTop="460dp" />
    <Button
        android:id="@+id/button34"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="261dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="460dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="292dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="284dp"
        />
    <Button
        android:id="@+id/button8"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="292dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="359dp"
        />
    <Button
        android:id="@+id/button12"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="292dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="434dp"
        />
    <Button
        android:id="@+id/button16"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="292dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="509dp"
        />
    <Button
        android:id="@+id/button20"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="292dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="584dp"
        />
    <Button
        android:id="@+id/button19"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="215dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="584dp"
        />
    <Button
        android:id="@+id/button18"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="584dp"
        />
    <Button
        android:id="@+id/button17"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="584dp"
        />
    <Button
        android:id="@+id/button25"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="336dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="310dp" />
    <Button
        android:id="@+id/button30"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="336dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="385dp" />
    <Button
        android:id="@+id/button35"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="336dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="460dp" />
    <Button
        android:id="@+id/button40"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="336dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="535dp" />
    <Button
        android:id="@+id/button39"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="261dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="535dp" />
    <Button
        android:id="@+id/button38"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="186dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="535dp" />
    <Button
        android:id="@+id/button37"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="535dp" />
    <Button
        android:id="@+id/button36"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="535dp" />

    <TextView
        android:id="@+id/p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:text="@string/green_start"
        android:textColor="@color/green"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/score"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        />


</RelativeLayout>